[project]
name = "sma-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.13.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.14",
    "langchain-experimental>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.4",
    "langgraph-checkpoint>=4.0.1",
    "langgraph-checkpoint-postgres>=3.0.5",
    "python-dotenv>=1.2.2",
]
